2001-08-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure:
	* unix/tcl.m4: added QNX-6 build support. [Bug #219410] (loverso)

2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (geturl): added port number to Host:
	header to comply with HTTP/1.1 spec (RFC 2068).  [Bug #452217]

2001-08-08  Don Porter  <dgp@users.sourceforge.net>

	* library/dde1.1/pkgIndex.tcl:
	* library/reg1.0/pkgIndex.tcl:  Package dependencies. [Patch 448931]

	* library/http/http.tcl:  
	* library/http/pkgIndex.tcl:  Upgrade to http 2.3.2.

	* library/msgcat/msgcat.tcl:  
	* library/msgcat/pkgIndex.tcl:  Upgrade to msgcat 1.1.1.

	* library/opt/optparse.tcl:  
	* library/opt/pkgIndex.tcl:  Upgrade to opt 0.4.3.

	* library/tcltest/tcltest.tcl:  
	* library/tcltest/pkgIndex.tcl:  Upgrade to tcltest 1.0.1.

2001-08-07  Miguel Sofer <msofer@users.sourceforge.net>

	* generic/tclExecute.c: Avoid panic when there are extra items in
	  the tcl stack [Bugs #406709 and 439843, Patch #414470]
	* tests/foreach.test: test to exercise the patch

2001-08-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd, Tcl_RegsubObjCmd):
	reordered the retrieval of arguments to avoid shimmering bug when
	the pattern and string referenced the same object.

	* unix/configure: regenerated
	* unix/tcl.m4: added GNU (HURD) configuration target. (brinkmann)
	[Patch: #442974]

2001-08-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure: regenerated
	* win/tcl.m4: fixed DLLSUFFIX definition to always be ${DBGX}.dll.
	This is necessary for TEA compliant builds that build shared
	against a static-built Tcl.
	* win/Makefile.in ($(TCLSH)): added $(TCL_STUB_LIB_FILE) to build
	target, otherwise it wouldn't get generated in a static build.

2001-08-06  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* generic/tclIOCmd.c (Tcl_GetsObjCmd): Applied patch from SF item
	  [442665] to fix the bug reported by it. The function can corrupt